[package]
name = "npkg"
version = "0.1.0"
edition = "2021"

[dependencies]
nix-editor = "0.2.8"
clap =  { version = "3.1.8", features = ["derive"] }
owo-colors = "3.3.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
bimap = { version = "0.6.2", features = ["serde"] }
brotli = "3.3.4"
curl = "0.4.43"

[lib]
name = "npkg"
path = "src/libnpkg/mod.rs"
