[package]
name = "npkg"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Some functions to manage and install packages on NixOS"
repository = "https://github.com/vlinkz/npkg/"
readme = "README.md"
include = [
  "src/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

[dependencies]
nix-editor = "0.2.11"
clap =  { version = "3.2.6", features = ["derive"] }
owo-colors = "3.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bimap = { version = "0.6.2", features = ["serde"] }
brotli = "3.3.4"
curl = "0.4.43"

[lib]
name = "npkg"
path = "src/libnpkg/mod.rs"
